# p3dpy

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ubuntu.yml
app/: vizserver.py
app/static/: index.html
app/static/js/: OrbitControls.js
app/templates/: index.html
docs/: index.md  requirements.txt
examples/: feature_example.py  filter_example.py  load_pcd.py  outleir_removal.py  realsense_segmentation.py  realsense_viewer.py  realsense_vizclient.py  save_h5.py  segmentation_example.py  vizclient_example.py
p3dpy/: __init__.py  assignment.py  feature.py  filter.py  io.py  pointcloud.py  registration.py  rgbdimage.py  run_vizserver.py  segmentation.py  vizclient.py
p3dpy/app/: cli.py  vizserver.py
p3dpy/app/static/css/: style.css
p3dpy/app/templates/: index.html
tests/: test_registration.py
