[tool.poetry]
name = "p3dpy"
version = "0.14.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
scipy = "^1.6.1"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
requests = "^2.25.1"
python-lzf = "^0.2.4"
numpy-stl = "^2.16.0"
plyfile = "^0.7.3"
types-requests = "^2.25.6"
pyrealsense2 = {version = "^2.42.0", optional = true}
matplotlib = {version = "^3.3.4", optional = true}
transforms3d = {version = "^0.3.1", optional = true}
scikit-learn = {version = "^0.24.1", optional = true}
h5py = {version = "^3.3.0", optional = true}
depthai = {version = "^2.10.0", optional = true}

[tool.poetry.scripts]
vizserver = "p3dpy.app.cli:main"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
twine = "^3.4.1"
mypy = "^0.910"
isort = "^5.9.3"
mkdocstrings = "^0.18.1"
mkdocs-material = "^8.2.12"
pytkdocs = {version = ">=0.5.0", extras = ["numpy-style"]}

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
examples = ["h5py", "matplotlib", "transforms3d", "scikit-learn", "pyrealsense2", "depthai"]
