[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p3dpy"
version = "0.16.0"
description = ""
authors = [{ name = "nekanat", email = "nekanat.stock@gmail.com" }]
requires-python = ">=3.11,<4"
license = "MIT"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.11.2",
    "fastapi>=0.66",
    "uvicorn[standard]>=0.14",
    "Jinja2>=2.11.3,<3",
    "aiofiles>=0.7",
    "requests>=2.25.1,<3",
    "python-lzf>=0.2",
    "numpy-stl>=2.16.0,<3",
    "plyfile>=0.8",
    "types-requests>=2.25.6,<3",
]

[tool.hatch.build.targets.sdist]
exclude = ["assets"]

[project.optional-dependencies]
examples = [
    "h5py>=3.3.0,<4",
    "matplotlib>=3.3.4,<4",
    "transforms3d>=0.4.2,<0.5",
    "scikit-learn>=0.24.1,<0.25",
]

[project.scripts]
vizserver = "p3dpy.app.cli:main"

[dependency-groups]
dev = [
    "black>=21",
    "twine>=3.4.1,<4",
    "mypy>=0.910,<0.911",
    "isort>=5.9.3,<6",
    "mkdocstrings>=0.18.1,<0.19",
    "mkdocs-material>=8.2.12,<9",
    "pytkdocs[numpy-style]>=0.5.0",
]
